# GstMadness

./: GstCommon.cpp  GstCommon.hpp  GstInput.cpp  GstInput.hpp  GstOut.pro  GstOutput.cpp  GstOutput.hpp  GstShow.cpp  GstShow.hpp  README.md  VideoTest.cpp  VideoTest.hpp
AppSrcAndSync/: test-netclock2-appsink-client.c  test-netclock2-appsink.c  test.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c
atime/: Makefile.am  gstrtpatime.c  gstrtpatimemeta.c  gstrtpatimemeta.h  gstrtpatimeparse.c  gstrtpatimeparse.h  gstrtpatimetimestamp.c  gstrtpatimetimestamp.h
